--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     </div>
     <div id="canvas-section">
-            <canvas></canvas>
+            <canvas id="canvas" width="1000px" height="300px"></canvas>
 
     </div>
     
